@@ -3,6 +3,9 @@ Imager release history.  Older releases can be found in Changes.old
 Imager 0.71 - unreleased
 ===========
 
+ - add the opacity fill type - an adaptor that modifies the opacity of
+   another fill.
+
 Bug fixes:
 
  - the conv filter now enforces that the sum of the coefficients is
